# obsidian-ontology-clipper-skills

./: .gitignore  README.md  pyproject.toml
docs/: book-title-note.md  movie-title-note.md  obsidian-ontology-core.md  ontology.md  person-note-management.md  template-analysis.md
examples/: book-title-note.md  chatgpt.md  goodreads.md  letterboxd.md  movie-title-note.md  person-note-update.md  wikipedia.md  youtube.md
python/ontology_clipper/: __init__.py  book_cli.py  book_note.py  cli.py  frontmatter.py  google_books.py  markdown.py  metadata.py  movie_cli.py  movie_note.py  note.py  obsidian_policy.py  omdb.py  ontology.py  people_cli.py  people_note.py  routing.py
skills/obsidian-clip-books/: SKILL.md
skills/obsidian-clip-chatgpt/: SKILL.md
skills/obsidian-clip-default-article/: SKILL.md
skills/obsidian-clip-events/: SKILL.md
skills/obsidian-clip-movies/: SKILL.md
skills/obsidian-clip-places/: SKILL.md
skills/obsidian-clip-podcasts/: SKILL.md
skills/obsidian-clip-wikipedia/: SKILL.md
skills/obsidian-clip-youtube/: SKILL.md
skills/obsidian-create-book-note/: SKILL.md
skills/obsidian-create-movie-note/: SKILL.md
skills/obsidian-manage-person-note/: SKILL.md
skills/obsidian-ontology-core/: SKILL.md
skills/obsidian-web-clipper-core/: SKILL.md
tests/: test_book_note.py  test_frontmatter.py  test_google_books.py  test_movie_note.py  test_note.py  test_obsidian_policy.py  test_omdb.py  test_ontology.py  test_people_note.py  test_routing.py
