[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-ontology-clipper-skills"
version = "0.1.0"
description = "Reusable Hermes Agent skills for ontology-first Obsidian clipping."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hermes Agent contributors"}]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
ontology-clipper = "ontology_clipper.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
